--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "echo 'webpack'"
+    "build": "echo 'webpack --config webpack.config.js'"
   },
   "repository": {
     "type": "git",
